--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <title>{{ page.title }} - {{ site.title }}</title>
+  <link rel="stylesheet" href="{{ site.path }}/css/style.css" >
+</head>
+<body>
 
-  {% include head.html %}
 
-  <body>
+<div id="header">
+  <span class='big'>{{ site.title }}</span>
+  <span class='small'>{{ site.subtitle }}</span>
+</div>
 
-    {% include header.html %}
+<div id="nav">
+  <a href="{{ site.path }}/index.html">Welcome</a> •
+  <a href="{{ site.path }}/two.html">Page Two</a> •
+  <a href="{{ site.path }}/three.html">Page Three</a> •
+  <a href="http://groups.google.com/group/wwwmake">Questions? Comments?</a> •
+  <a href="https://github.com/planetjekyll/jekyll-starter-theme">About</a>
+</div>
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+<div id="content">
+  {{ content }}
+</div>
 
-    {% include footer.html %}
-
-  </body>
-
+</body>
 </html>
+
